# nuwa

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md
.claude/: launch.json  self-review-checklist.md
.githooks/: commit-msg  filter-msg.py  pre-push  strip-ai-coauthor.py
.github/: dependabot.yml  pull_request_template.md
backend/server/: Cargo.toml  server.err
backend/server/src/: config_persist.rs  constants.rs  error.rs  lib.rs  main.rs  state.rs
backend/server/src/handlers/: agents.rs  audio.rs  chat.rs  chat_stream.rs  coding.rs  config.rs  download.rs  inference.rs  mod.rs  models.rs  sse.rs  system.rs  voices.rs  xai.rs
backend/server/src/middleware/: mod.rs
backend/server/src/routes/: mod.rs
backend/server/src/services/: agent_scheduler.rs  coding_cli.rs  downloader.rs  inference.rs  mod.rs  model_scanner.rs  repo_fetcher.rs  voice_library.rs  xai_client.rs  xai_oauth.rs
backend/server/src/util/: gpu_backend.rs  mod.rs
backend/server/tests/: chat_stream.rs  integration.rs
core/: pyproject.toml
core/src/voxcpm/: __init__.py
core/src/voxcpm/model_downloader/: __init__.py  downloader.py  progress.py  retry.py  sources.py  verify.py
core/src/voxcpm_cli/: __init__.py  main.py
core/tests/: test_downloader.py
docs/: api.md  architecture.md  asr_solutions_2026.md  asr_test_final_report.md  data-lifecycle.md  file-structure.md  gpt_sovits_setup_guide.md  model_management.md  model_test_final_report_2026.md  model_test_final_report_20260503.md  model_test_report.md  module-landscape.md  nvidia_cuda_setup.md  project.md  roadmap.md  rx9070xt_ai_setup.md  setup.md  tested_models.md  tts_production_solution.md  tts_voice_cloning_2026.md  voxcpm_deployment.md
scripts/: _evaluate_jyy_ref_candidates.py  _get_ref_texts.py  _run_asr_showcase.py  _run_asr_showcase_v2.py  _run_glm_tts_jyy.py  _run_tts_best_effort.py  _run_tts_showcase.py  _show_results.py  (+18 more)
(+714 files in other folders)
