[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "voxcpm"
version = "0.1.0"
description = "VoxCPM core library: ASR, TTS, audio processing, and model downloader"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx[http2]>=0.27.0",
    "tqdm>=4.66.0",
    "pydantic>=2.0.0",
    "rich>=13.0.0",
    "tenacity>=8.0.0",
    "typer>=0.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.4.0",
    "mypy>=1.0.0",
]

[project.scripts]
voxcpm = "voxcpm_cli.main:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/voxcpm", "src/voxcpm_cli"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_ignores = true
