[package]
name = "nuwa-server"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"

[dependencies]
axum = { version = "0.8", features = ["multipart", "ws"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.7", features = ["cors", "trace", "fs", "compression-gzip", "set-header", "limit"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
anyhow = "1"
futures = "0.3"
tokio-stream = { version = "0.1", features = ["sync"] }
tokio-util = { version = "0.7", features = ["io"] }
async-stream = "0.3"

reqwest = { version = "0.12", features = ["json", "stream"] }
fs2 = "0.4"

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
proptest = "1"
tempfile = "3"
